--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <p class="lead">Izabella Maria Fernandes Santos</p>
+        <h1>Eu ensino Língua Inglesa</h1>
+        <p>Sou Engenheira de inglês.Dou aulas particulare de inglês, trabalho com métodos focados nas habilidades de fala, que desenvolve e facilita o aprendizado para de fato conseguir se comunicar em inglês. Veja um pouco do meu trabalho e sobre mim</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
@@ -35,9 +33,9 @@
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
+                        <h5 class="card-title">Tragetória e experiência</h5>
+                        <p class="card-text">Estudo inglês desde cedo, sempre esteve presente na minha vida, fiz 2 anos de curso no ccaa, um
+                            favoritos, inclle"> ano de curso online com professoes de outros paíes na englihs central e seis mees de intercâmbio
                             na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
                             externas do Google Fonts.
                         </p>
