--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
                         <h5 class="card-title">Tragetória e experiência</h5>
                         <p class="card-text">Estudo inglês desde cedo, sempre esteve presente na minha vida, fiz 2 anos de curso no ccaa, um
                             favoritos, inclle"> ano de curso online com professoes de outros paíes na englihs central e seis mees de intercâmbio
-                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-                            externas do Google Fonts.
+                            na Austrália.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
