--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <p class="lead">Izabella Maria Fernandes Santos</p>
         <h1>Eu ensino Língua Inglesa</h1>
         <p>Sou Engenheira de inglês.Dou aulas particulare de inglês, trabalho com métodos focados nas habilidades de fala, que desenvolve e facilita o aprendizado para de fato conseguir se comunicar em inglês. Veja um pouco do meu trabalho e sobre mim</p>
-        <p>Minhas habilidades</p>
+        <p>O que trabalhamos nas aulas?</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
+            <p class="badge bg-secondary">Foco na "Speaking Skill"</p>
+            <p class="badge bg-secondary">Gramática</p>
+            <p class="badge bg-secondary">Interpretação</p>
             <p class="badge bg-secondary">Scratch</p>
         </div>
     </header>
@@ -35,7 +35,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Tragetória e experiência</h5>
                         <p class="card-text">Estudo inglês desde cedo, sempre esteve presente na minha vida, fiz 2 anos de curso no ccaa, um
-                            favoritos, inclle"> ano de curso online com professoes de outros paíes na englihs central e seis mees de intercâmbio
+                            favoritos, inclle"> ano de curso online com professoes de outros países na englihs central e seis meses de intercâmbio
                             na Austrália.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
