--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
             srcset="">
         <p class="lead">Izabella Maria Fernandes Santos</p>
         <h1>Eu ensino Língua Inglesa</h1>
-        <p>Sou Engenheira de inglês.Dou aulas particulare de inglês, trabalho com métodos focados nas habilidades de fala, que desenvolve e facilita o aprendizado para de fato conseguir se comunicar em inglês. Veja um pouco do meu trabalho e sobre mim</p>
+        <p>Sou professora de inglês. Me formei com liçenciatura em letras, focada em língua estrangeira na na Univercidade de São Paulo (USP)  , trabalho com métodos focados nas habilidades de fala, que desenvolve e facilita o aprendizado para de fato conseguir se comunicar em inglês. Veja um pouco do meu trabalho e sobre mim</p>
         <p>O que trabalhamos nas aulas?</p>
         <div>
             <p class="badge bg-secondary">Foco na "Speaking Skill"</p>
             <p class="badge bg-secondary">Gramática</p>
             <p class="badge bg-secondary">Interpretação</p>
-            <p class="badge bg-secondary">Scratch</p>
+            <p class="badge bg-secondary">Atividades que conectem o aprendizado a situações reais e interações autênticas</p>
         </div>
     </header>
     <main class="container mt-5">
-        <h2>Meus projetos</h2>
+        <h2>Minha tragetória acadêmica e proficional</h2>
         <div class="row">
             <!-- Projeto 1 -->
             <div class="col-md-4">
@@ -34,9 +34,7 @@
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Tragetória e experiência</h5>
-                        <p class="card-text">Estudo inglês desde cedo, sempre esteve presente na minha vida, fiz 2 anos de curso no ccaa, um
-                            favoritos, inclle"> ano de curso online com professoes de outros países na englihs central e seis meses de intercâmbio
-                            na Austrália.
+                        <p class="card-text">gg
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
